Dodajanje stilov spletne strani

--- a/spoznajmo-fri-okolico.html
+++ b/spoznajmo-fri-okolico.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" style="height: 100%; width: 100%; padding: 0; margin: 0; display: flex;">
-  
+<html lang="en">
+
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" />
+  <link rel="stylesheet" href="css/stili.css" />
 
   <!-- leaflet knjižnica -->
   <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
@@ -16,8 +17,8 @@
     <title>DN1</title>
   </head>
 
-  <body style="height: 100%; width: 100%; padding: 0; margin: 0; display: flex;">
-    
+  <body>
+
     <!-- MENI -->
     <meni>
       <table>
@@ -54,7 +55,7 @@
 
     <!-- TELO -->
     <telo id="mapa_id"></telo>
-    
+
   </body>
-  
+
 </html>
