--- a/spoznajmo-fri-okolico.html
+++ b/spoznajmo-fri-okolico.html
@@ -23,13 +23,13 @@
     <meni>
       <table>
         <tr>
-          <td>Zanimivosti:</td>
+          <td class="info-element">Zanimivosti:</td>
           <td>
             <button id="dodajFakultete">Dodaj fakultete</button>
           </td>
         </tr>
         <tr>
-          <td>Najdeni rezultati:</td>
+          <td class="info-element">Najdeni rezultati:</td>
           <td>0 rezultatov</td>
         </tr>
         <tr>
