Dodajanje gumba za dodajanje restavracij

--- a/spoznajmo-fri-okolico.html
+++ b/spoznajmo-fri-okolico.html
@@ -26,6 +26,7 @@
           <td class="info-element">Zanimivosti:</td>
           <td>
             <button id="dodajFakultete">Dodaj fakultete</button>
+            <input type="button" id="dodajRestavracije" value="Dodaj restavracije">
           </td>
         </tr>
         <tr>
