--- a/spoznajmo-fri-okolico.html
+++ b/spoznajmo-fri-okolico.html
@@ -25,8 +25,8 @@
         <tr>
           <td class="info-element">Zanimivosti:</td>
           <td>
-            <button id="dodajFakultete">Dodaj fakultete</button>
-            <input type="button" id="dodajRestavracije" value="Dodaj restavracije">
+            <button id="dodajFakultete" class="rob senca">Dodaj fakultete</button>
+            <input type="button" id="dodajRestavracije" value="Dodaj restavracije" class="rob senca">
           </td>
         </tr>
         <tr>
@@ -36,7 +36,7 @@
         <tr>
           <td></td>
           <td>
-            <button id="izbrisiRezultate" disabled="true">
+            <button id="izbrisiRezultate" disabled="true" class="rob senca">
               Odstrani vse interesne točke</button>
           </td>
         </tr>
@@ -55,7 +55,7 @@
     </meni>
 
     <!-- TELO -->
-    <telo id="mapa_id"></telo>
+    <telo id="mapa_id" class="rob senca"></telo>
 
   </body>
 
