--- a/spoznajmo-fri-okolico.html
+++ b/spoznajmo-fri-okolico.html
@@ -46,7 +46,7 @@
             Prikaz radija<br></td>
         </tr>
         <tr>
-          <td>
+          <td colspan="2" align="center">
             <input id="idDoFri" type="radio" name="pot" value="doFri" checked>Pot do FRI<br>
             <input id="idIzFri" type="radio" name="pot" value="izFri">Pot iz FRI<br>
           </td>
