--- a/spoznajmo-fri-okolico.html
+++ b/spoznajmo-fri-okolico.html
@@ -25,8 +25,8 @@
         <tr>
           <td class="info-element">Zanimivosti:</td>
           <td>
-            <button id="dodajFakultete" class="rob senca">Dodaj fakultete</button>
-            <input type="button" id="dodajRestavracije" value="Dodaj restavracije" class="rob senca">
+            <button id="dodajFakultete" class="rob senca fakultete"><img src="slike/university_logo_mini.png"></img>Dodaj fakultete</button>
+            <input type="button" id="dodajRestavracije" value="Dodaj restavracije" class="rob senca restavracije">
           </td>
         </tr>
         <tr>
