Dodajanje knjižnice za računanje

--- a/spoznajmo-fri-okolico.html
+++ b/spoznajmo-fri-okolico.html
@@ -6,6 +6,8 @@
 
   <!-- leaflet knjižnica -->
   <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
+  <script src="skripte/distance-util.js"></script>
+  <script src="skripte/skripta.js"></script>
 
   <!-- leaflet stili -->
   <link rel="stylesheet" href="css/leaflet-routing-machine.css" />
