Prikaz števila rezultatov

--- a/spoznajmo-fri-okolico.html
+++ b/spoznajmo-fri-okolico.html
@@ -33,7 +33,7 @@
         </tr>
         <tr>
           <td class="info-element">Najdeni rezultati:</td>
-          <td>0 rezultatov</td>
+          <td><label id="fakultete_rezultati"></label> fakultet in <label id="restavracije_rezultati"></label> restavracij</td>
         </tr>
         <tr>
           <td></td>
