--- a/spoznajmo-fri-okolico.html
+++ b/spoznajmo-fri-okolico.html
@@ -48,6 +48,10 @@
             Prikaz radija<br></td>
         </tr>
         <tr>
+          <td class="info-element">Prikaži v bližini do:</td>
+          <td><input type="text" id="radij" value="0"> km</td>
+        </tr>
+        <tr>
           <td colspan="2" align="center">
             <input id="idDoFri" type="radio" name="pot" value="doFri" checked>Pot do FRI<br>
             <input id="idIzFri" type="radio" name="pot" value="izFri">Pot iz FRI<br>
